[feat] Melhorando lookup